fixed Z-index

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.scss
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.scss
@@ -4,6 +4,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 47px;
+  z-index: 10;
 }
 
 ::ng-deep .p-datatable-header {
